# fastapi-restful

./: app.py  pyproject.toml
