[tool.poetry]
name = "fastapi-restful"
version = "0.1.0"
description = ""
authors = ["Eric Souza <ericsouza0801@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
fastapi = {version = "^0.58.0", extras = ["all"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
